--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,1 @@
-<div class="kdfnjnfd">
-  <header>
-    <nav>
-      <!-- <a href="#" id="menu-icon"></a> -->
-      <ul>
-        <li class="sec">
-          <a href="#">About Me</a>
-        </li>
-        <li class="sec">
-          <a href="#">Projects</a>
-        </li>
-        <li class="sec">
-          <a href="#">Skills</a>
-        </li>
-        <li class="sec">
-          <a href="#">Contact</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-</div>
+<app-landing-page></app-landing-page>
