--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -4,16 +4,16 @@
     <nav>
       <ul>
         <li class="sec">
-          <a href="#">About</a>
+          <a [routerLink]="['/about']"> About </a>
         </li>
         <li class="sec">
-          <a href="#">Projects</a>
+          <a [routerLink]="['/projects']"> Projects </a>
         </li>
         <li class="sec">
-          <a href="#">Skills</a>
+          <a [routerLink]="['/skills']"> Skills </a>
         </li>
         <li class="sec">
-          <a href="#">Contact</a>
+          <a [routerLink]="['/contact']"> Contact </a>
         </li>
       </ul>
     </nav>
