--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,11 +1,12 @@
 .hello {
-  background-image: url('../img/landing-page.jpeg');
+  /* background-image: url('../img/landing-page.jpeg'); */
   background-size: cover;
   background-position: center;
   height: 100vh;
   /* width: 100vh; */
   display: flex;
   justify-content: center;
+  background: #4f5b66;
 }
 
 .sec {
@@ -22,7 +23,7 @@
 */
 
 a {
-  color: #fb9062;
+  color: #343d46;
   text-decoration: none;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
@@ -30,7 +31,7 @@ a {
 }
 
 a:hover {
-  color: #ee5d6c;
+  color: #a7adba;
   /* background: yellow; */
   padding: 25px;
   /* box-shadow: 1px 1px 1px 10px; */
