--- a/src/app/skills/skills.component.css
+++ b/src/app/skills/skills.component.css
@@ -1,5 +1,5 @@
 .hello {
-  background-image: url('../img/skills-page.jpeg');
+  background: pink;
   background-size: cover;
   background-position: center;
   height: 100vh;
