added filler text

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,16 @@
-<p>
-  projects works!
-</p>
+<app-landing-page></app-landing-page>
+<div class="hello">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam eaque neque, veniam, rem qui itaque animi doloremque vel
+  alias, inventore laudantium. Sed id, cupiditate ipsam in dolore inventore natus aut aliquam. Enim esse doloribus laboriosam,
+  maiores, voluptatem ratione velit consectetur amet cumque, quo soluta impedit expedita corrupti aliquam. Repellat dolores
+  est veniam obcaecati quisquam commodi sit iste harum voluptatem! Ad itaque ea corrupti ex non temporibus eveniet tempora
+  corporis illum excepturi eum, neque cumque sapiente! Beatae repellendus eos in, voluptas vitae nemo unde ea odit repudiandae
+  blanditiis esse dolore voluptatem velit perspiciatis qui tenetur inventore nesciunt cupiditate eveniet. Culpa molestias
+  dolores laudantium, repellendus earum eveniet placeat facere consequatur. Ducimus officia obcaecati fugiat dolorem incidunt
+  accusamus, praesentium rem mollitia accusantium? Ratione deserunt sunt quibusdam dicta ipsa officia soluta veniam eligendi
+  ex explicabo ducimus, sit, delectus modi quis quos voluptas est consequuntur recusandae hic esse temporibus libero? Earum
+  molestiae voluptatibus ex nam quisquam maiores consequatur, pariatur fugit deserunt nesciunt enim animi accusamus sunt
+  saepe quaerat veniam tempora error impedit. Aperiam quae placeat minus dolor repellendus, earum officia eligendi molestias
+  tempore magni, veniam aliquid odio itaque quas nesciunt pariatur nobis. In, hic a. Nemo alias tempora iste. Ipsa officiis
+  ea sapiente explicabo tempora.
+</div>
