changed layout of webpage

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-landing-page></app-landing-page>
+<app-about></app-about>
+<app-contact></app-contact>
+<app-projects></app-projects>
+<app-skills></app-skills>
