--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
-<app-landing-page></app-landing-page>
 <div class="hello">
+  <h1>contact</h1>
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nihil magnam qui quis nulla vel aspernatur ipsam aliquid
   sed repudiandae ab maxime corporis repellendus error ipsa nisi, asperiores veritatis autem. Atque maxime amet eaque quisquam
   temporibus quis aut quaerat ex quam iste sed, ipsa non quidem quibusdam commodi, sit doloremque rerum laboriosam voluptatum
