--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,5 @@
-<app-landing-page></app-landing-page>
 <div class="hello">
+  <h1>project</h1>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam eaque neque, veniam, rem qui itaque animi doloremque vel
   alias, inventore laudantium. Sed id, cupiditate ipsam in dolore inventore natus aut aliquam. Enim esse doloribus laboriosam,
   maiores, voluptatem ratione velit consectetur amet cumque, quo soluta impedit expedita corrupti aliquam. Repellat dolores
