final layout, no more changes

--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,6 +1,6 @@
 .hello {
   /* background-image: url('../img/about-page.jpeg'); */
-  background: #65737e;
+  background: #bae1ff;
   background-size: cover;
   background-position: center;
   height: 100vh;
