--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,4 @@
+<app-landing-page></app-landing-page>
 <div class="hello">
   <h1>contact</h1>
   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nihil magnam qui quis nulla vel aspernatur ipsam aliquid
