--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,4 @@
+<app-landing-page></app-landing-page>
 <div class="hello">
   <h1>project</h1>
   Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam eaque neque, veniam, rem qui itaque animi doloremque vel
