--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,4 @@
+<app-landing-page></app-landing-page>
 <div class="hello">
   <h1>About Me</h1>
   <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores soluta ratione architecto nobis dolorum sequi amet placeat,
