colors are done and also landing page is diferent, made it look 10x better last change to design

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,20 +1,24 @@
-<div class="hello">
-  <header>
-    <nav>
-      <ul>
-        <li class="sec">
-          <a [routerLink]="['/about']"> About </a>
-        </li>
-        <li class="sec">
-          <a [routerLink]="['/projects']"> Projects </a>
-        </li>
-        <li class="sec">
-          <a [routerLink]="['/skills']"> Skills </a>
-        </li>
-        <li class="sec">
-          <a [routerLink]="['/contact']"> Contact </a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+<div id="blah">
+  <div id="hi">
+    <div class="hello">
+      <header>
+        <nav>
+          <ul>
+            <li class="sec">
+              <a [routerLink]="['/about']"> About </a>
+            </li>
+            <li class="sec">
+              <a [routerLink]="['/projects']"> Projects </a>
+            </li>
+            <li class="sec">
+              <a [routerLink]="['/skills']"> Skills </a>
+            </li>
+            <li class="sec">
+              <a [routerLink]="['/contact']"> Contact </a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+  </div>
 </div>
