--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,3 +1,12 @@
+#blah {
+  background: #ffd2da;
+}
+
+#hi {
+  transform: skew(0deg, 20deg);
+  /* background: #ffd2da; */
+}
+
 .hello {
   /* background-image: url('../img/landing-page.jpeg'); */
   background-size: cover;
@@ -6,7 +15,7 @@
   /* width: 100vh; */
   display: flex;
   justify-content: center;
-  background: #4f5b66;
+  background: #fff5ee;
 }
 
 .sec {
@@ -23,7 +32,7 @@
 */
 
 a {
-  color: #343d46;
+  color: #adcbe3;
   text-decoration: none;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
@@ -31,7 +40,7 @@ a {
 }
 
 a:hover {
-  color: #a7adba;
+  color: #63ace5;
   /* background: yellow; */
   padding: 25px;
   /* box-shadow: 1px 1px 1px 10px; */
