--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,18 +1,13 @@
 <app-landing-page></app-landing-page>
 <div class="hello">
-  <h1>About Me</h1>
-  <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores soluta ratione architecto nobis dolorum sequi amet placeat,
+
+  <h1 class="head-text">About Me</h1>
+  <h4 class="details-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores soluta ratione architecto nobis dolorum sequi amet placeat,
     libero quos numquam dolorem animi nisi vero quasi commodi, ad, dicta consectetur suscipit odit doloribus repudiandae
     fugit consequatur iste beatae. Nesciunt tempore at est excepturi, iste, qui reprehenderit quaerat quae debitis autem,
     nostrum blanditiis suscipit iure doloremque fuga sunt consectetur ipsam optio! Laborum modi dignissimos nam. Tenetur
     nihil aperiam maiores repudiandae nulla blanditiis veritatis ut, ad consequatur deleniti totam, reprehenderit dolorum
-    quia eos? Eum perferendis omnis, nihil explicabo ducimus architecto accusantium cupiditate voluptas nesciunt pariatur
-    officiis assumenda fuga nulla quas illo maiores excepturi ab tempore blanditiis vel. Cum pariatur, veniam minus, impedit
-    exercitationem natus nostrum ipsam quod quisquam praesentium ad saepe necessitatibus ab dolor sunt nam vero perferendis
-    architecto officiis? Veniam qui reiciendis autem, deserunt labore amet at exercitationem incidunt quasi nam molestias
-    accusamus ducimus similique voluptate quam odit ipsum nesciunt sed repellendus quo nemo facere necessitatibus magni?
-    Maxime aperiam quam suscipit voluptates nostrum. Nihil veniam rerum saepe expedita. Veritatis asperiores rem et quas
-    sequi, delectus libero, debitis repellendus, earum error commodi quasi quidem exercitationem numquam dolor eius? Pariatur
-    magnam aut dolore iusto commodi totam, fugit ex alias quibusdam! Blanditiis error ad sit!
+
   </h4>
+
 </div>
