--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,6 +1,6 @@
 .hello {
   /* background-image: url('../img/about-page.jpeg'); */
-  background: #ffdfba;
+  background: #f5dfb8;
   background-size: cover;
   background-position: center;
   height: 100vh;
