--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,3 +1,11 @@
 <app-landing-page></app-landing-page>
 <div class="hello">
+  <h1 class="head-text">Skills</h1>
+  <h4 class="details-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio temporibus debitis, dolore ducimus animi eius optio
+    est repudiandae nulla excepturi. Fugiat, qui perspiciatis totam natus quidem repudiandae adipisci. Excepturi animi voluptas
+    tempora facilis quos. Praesentium minima quo asperiores. Fugit magnam pariatur dolor id a voluptates quisquam, vitae
+    numquam dolores ex ut corporis dolorem amet nisi quos reiciendis enim quo sunt possimus nam fuga? Amet ipsa nihil quas
+    nulla odio, illum explicabo? Natus mollitia nobis, sed, eum voluptas corrupti dolorum temporibus eius neque minima ipsa
+    in aliquid, voluptatum ipsam velit molestiae est. Incidunt fuga deserunt modi dolore, in mollitia neque. Quisquam quibusdam
+    quaerat, odio minima eveniet saepe rerum tenetur maxime inventore voluptatem, </h4>
 </div>
