--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,17 +1,11 @@
 <app-landing-page></app-landing-page>
 <div class="hello">
-  <h1>contact</h1>
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nihil magnam qui quis nulla vel aspernatur ipsam aliquid
-  sed repudiandae ab maxime corporis repellendus error ipsa nisi, asperiores veritatis autem. Atque maxime amet eaque quisquam
-  temporibus quis aut quaerat ex quam iste sed, ipsa non quidem quibusdam commodi, sit doloremque rerum laboriosam voluptatum
-  deserunt! Sint, eaque! Temporibus rem sequi repellat exercitationem repudiandae unde! Harum quos optio consequatur excepturi
-  ex rerum assumenda totam, voluptatum saepe modi ipsam, recusandae quam illum eveniet voluptatem eius! Perspiciatis cum
-  voluptatem pariatur voluptatibus, porro animi rem nesciunt temporibus et neque, deserunt enim, sapiente labore provident
-  velit dolores debitis accusamus! Corrupti quod iure, magnam rem nemo suscipit accusantium corporis, ea incidunt tenetur
-  eius vitae soluta aliquid nesciunt eligendi consequatur sint quos cum dolores possimus saepe. Itaque similique autem sapiente,
-  adipisci temporibus aliquam corrupti dignissimos molestias, quod voluptatum doloremque esse quae, illum consequatur sit
-  facere. Pariatur ullam molestiae sit ipsa voluptatibus amet alias? Libero debitis omnis reiciendis non eum nemo magnam
-  eius. Perspiciatis aut totam itaque omnis, atque nam ullam cupiditate eaque voluptatem asperiores quidem nobis, blanditiis
-  eius alias quisquam saepe tempora. Nobis, possimus! Modi, assumenda excepturi? Quas fuga modi at. Fugit assumenda distinctio,
-  aperiam explicabo repellat quas.
+  <h1 class="head-text">Contact</h1>
+  <h4 class="details-text">
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum nihil magnam qui quis nulla vel aspernatur ipsam aliquid
+    sed repudiandae ab maxime corporis repellendus error ipsa nisi, asperiores veritatis autem. Atque maxime amet eaque quisquam
+    temporibus quis aut quaerat ex quam iste sed, ipsa non quidem quibusdam commodi, sit doloremque rerum laboriosam voluptatum
+    deserunt! Sint, eaque! Temporibus rem sequi repellat exercitationem repudiandae unde! Harum quos optio consequatur excepturi
+    ex rerum assumenda totam, voluptatum saepe modi ipsam, recusandae quam illum eveniet voluptatem eius! Perspiciatis cum
+  </h4>
 </div>
